  * Added preferences to delete Database on startup
  * Hopefully no more stale articles, unread-state should be completely synchronized now
  * Fixed Error-Messages not beeing displayed with Server v1.5.3
  * Fixed POST-Data not beeing interpreted correctly by the server, now sending JSON-encoded data
  * Two more bugs with starred/published articles fixed

== Version 0.9.6 ==
  * Show read articles when browsing "only unread articles" and entering an empty feed (eg. by returning from the last unread article)
  * Minor refactoring and changes due to release of Tiny Tiny RSS 1.5.3 (POST-Requests, Attachments in getHeadlines)
  * Added check for corrupted DB, it is moved to a backup-file and a new DB will be created
  * Show last-opened article/feed when returning from child-view, even if read content is filtered
  * Improved speed of update when using long-press on category -> "Show all articles"
  * Cleanup of old starred/published articles when refreshing
  * Fixed DB-Exceptions

== Version 0.9.5 ==
  * Fixed error-message for API_DISABLED not beeing displayed
  * Fixed swype-here-notification not beeing displayed
  * Changed zoom-behaviour (default: Images are scaled, once zoomed: Images are displayed in right aspect-ratio)
  * Fixed broken next/previous article/feed jump when returning from article-view
  * Images are not fetched from online-sources anymore if browsing in Offline-mode
  * Some performance-issues fixed and some background-exceptions too

== Version 0.9.4 ==
  * Reduced permissions as requested by Issue #58 ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=57 Is "Phone Calls" Permission Necessary?])

== Version 0.9.3 ==
  * Added French translation, thanks Régis
  * Long-press a category to show all articles in this category in one list
  * "Show all articles" now also allows browsing with volume-keys or swiping

== Version 0.9.2 ==
  * ImageCache now started as a service so it doesn't get killed anymore by the system