@@ -4,7 +4,7 @@
     package="org.ttrssreader"
     android:installLocation="auto"
     android:versionName="0.9.7"
-    android:versionCode="972"
+    android:versionCode="973"
 >
 
     <application
